Adjust release script